--- a/public/index.html
+++ b/public/index.html
@@ -9,44 +9,43 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Get Cover</title>
   <link rel="stylesheet" href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      text-align: center;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-    p {
-      font-size: 1.2rem;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
 </head>
 <body>
   <div id="root"></div>
   <noscript>
- 
-    <div class="container">
- 
+    <style>
+      body, html {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .noscript-container {
+        font-family: Arial, sans-serif;
+        background-color:transparent;
+        color: #333;
+        padding: 20px;
+        text-align: center;
+      }
+      .noscript-container h1 {
+        font-size: 2rem;
+        margin-bottom: 10px;
+      }
+      .noscript-container p {
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+      }
+      .noscript-container img {
+        max-width: 100%;
+        height: auto;
+      }
+    </style>
+    <div class="noscript-container">
       <img src="./Get-Cover.png" alt="JavaScript Disabled Image">
       <h1>JavaScript Disabled</h1>
       <p>Please enable JavaScript to run this app.</p>
     </div>
-    
   </noscript>
 </body>
 </html>
