--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/Get-Fabicon.png" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/Get-Fabicon.png" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Get Cover</title>
-  <link rel="stylesheet" href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+  <link rel="stylesheet"
+    href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
 </head>
+
 <body>
   <div id="root"></div>
   <noscript>
     <style>
-      body, html {
+      body,
+      html {
         height: 100%;
         margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
       }
+
       .noscript-container {
         font-family: Arial, sans-serif;
-        background-color:transparent;
+        background-color: transparent;
         color: #333;
         padding: 20px;
         text-align: center;
       }
+
       .noscript-container h1 {
         font-size: 2rem;
         margin-bottom: 10px;
       }
+
       .noscript-container p {
         font-size: 1.2rem;
         margin-bottom: 20px;
       }
+
       .noscript-container img {
         max-width: 100%;
         height: auto;
@@ -48,4 +56,5 @@
     </div>
   </noscript>
 </body>
+
 </html>
